@@ -4,27 +4,35 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.math.BigInteger;
+import java.net.ConnectException;
 import java.net.URI;
 import java.net.URLEncoder;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.nio.channels.ClosedChannelException;
 import java.nio.charset.StandardCharsets;
+import java.security.InvalidAlgorithmParameterException;
 import java.security.InvalidKeyException;
 import java.security.KeyManagementException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.security.Signature;
 import java.security.SignatureException;
+import java.security.spec.InvalidKeySpecException;
 import java.time.Duration;
 import java.time.Instant;
+import java.util.ArrayList;
 import java.util.Base64;
+import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import javax.annotation.PostConstruct;
 
 import org.apache.commons.codec.binary.Hex;
+import org.apache.commons.lang3.exception.ExceptionUtils;
+import org.apache.logging.log4j.util.Strings;
 import org.bitcoinj.core.Base58;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
@@ -45,7 +53,15 @@ import com.ripple.cryptoconditions.der.DerOutputStream;
 
 import es.upv.grycap.tracer.Util;
 import es.upv.grycap.tracer.exceptions.UncheckedKeyManagementException;
+import es.upv.grycap.tracer.model.BigchainDbProperties;
+import es.upv.grycap.tracer.model.BlockchainProperties;
+import es.upv.grycap.tracer.model.FilterParams;
+import es.upv.grycap.tracer.model.IFilterParams;
+import es.upv.grycap.tracer.model.TraceCacheOpResult;
+import es.upv.grycap.tracer.model.dto.BlockchainType;
 import es.upv.grycap.tracer.model.dto.HashType;
+import es.upv.grycap.tracer.model.dto.ITransaction;
+import es.upv.grycap.tracer.model.dto.ReqCacheStatus;
 import es.upv.grycap.tracer.model.dto.ReqDTO;
 import es.upv.grycap.tracer.model.dto.bigchaindb.Asset;
 import es.upv.grycap.tracer.model.dto.bigchaindb.AssetCreate;
@@ -57,16 +73,19 @@ import es.upv.grycap.tracer.model.dto.bigchaindb.SubconditionED25519;
 import es.upv.grycap.tracer.model.dto.bigchaindb.Transaction;
 import es.upv.grycap.tracer.model.dto.bigchaindb.Transaction.Operation;
 import es.upv.grycap.tracer.exceptions.BigchaindbException;
+import es.upv.grycap.tracer.exceptions.TraceException;
 import es.upv.grycap.tracer.exceptions.TransactionNotFoundException;
+import es.upv.grycap.tracer.exceptions.UncheckedExceptionFactory;
 import es.upv.grycap.tracer.exceptions.UncheckedInterruptedException;
 import es.upv.grycap.tracer.exceptions.UncheckedInvalidKeyException;
 import es.upv.grycap.tracer.exceptions.UncheckedJsonMappingException;
 import es.upv.grycap.tracer.exceptions.UncheckedJsonProcessingException;
 import es.upv.grycap.tracer.exceptions.UncheckedNoSuchAlgorithmException;
 import es.upv.grycap.tracer.exceptions.UncheckedSignatureException;
-import es.upv.grycap.tracer.model.trace.TraceCacheEntry;
+import es.upv.grycap.tracer.model.trace.TraceBase;
+import es.upv.grycap.tracer.model.trace.TraceSummaryBase;
+import es.upv.grycap.tracer.model.trace.TraceVersion;
 import es.upv.grycap.tracer.model.trace.v1.Trace;
-import es.upv.grycap.tracer.persistence.ITraceCacheRepository;
 import lombok.extern.slf4j.Slf4j;
 import net.i2p.crypto.eddsa.EdDSAEngine;
 import net.i2p.crypto.eddsa.EdDSAPrivateKey;
@@ -81,10 +100,7 @@ public class BigchainDbManager implements BlockchainManager {
 
     public static final String TRACE_USER_ID = "userId";
 
-	@Autowired
-	protected ITraceCacheRepository traceCacheRepository;
-
-	@Autowired
+	//@Autowired
 	protected NodeKeysManager nodeKeysManager;
 
 	@Autowired
@@ -95,41 +111,61 @@ public class BigchainDbManager implements BlockchainManager {
 
 //	protected WebClient wb;
 
-	protected String transactionModePost;
+//	protected String transactionModePost;
 
 	
-	protected HashingService hashingService;
+	//protected HashingService hashingService;
+	protected TraceFiltering traceFiltering;
 
-	protected String blockchaindbBaseUrl;
+//	protected String blockchaindbBaseUrl;
 
-	protected int defaultAmountTransaction;
+//	protected int defaultAmountTransaction;
 	
 	protected boolean disableSSLVerification;
+	
+	protected final BigchainDbProperties props;
 
 	@Autowired
-	public BigchainDbManager(@Value("${blockchain.url}") String blockchaindbBaseUrl,
-			@Value("${blockchain.bigchaindb.transactionModePost}") String transactionModePost,
-			@Value("${blockchain.bigchaindb.defaultAmountTransaction}") int defaultAmountTransaction,
+	public BigchainDbManager(@Autowired final BigchainDbProperties props,
 			@Value("${tracer.disableSSLVerification}") boolean disableSSLVerification,
-			@Autowired HashingService hashingService) {
-		this.blockchaindbBaseUrl = blockchaindbBaseUrl;
-		this.transactionModePost = transactionModePost;
-		this.defaultAmountTransaction = defaultAmountTransaction;
+			//@Autowired HashingService hashingService,
+			@Autowired TraceFiltering traceFiltering) 
+					throws NoSuchAlgorithmException, InvalidKeySpecException, InvalidAlgorithmParameterException, IOException {
+		this.props = props;
+//		this.blockchaindbBaseUrl = blockchaindbBaseUrl;
+//		this.transactionModePost = transactionModePost;
+//		this.defaultAmountTransaction = defaultAmountTransaction;
 		this.disableSSLVerification = disableSSLVerification;
 		log.info("Disable SSL verification: " + disableSSLVerification);
-		this.hashingService = hashingService;
+		//this.hashingService = hashingService;
+		this.traceFiltering = traceFiltering;
+		nodeKeysManager = new NodeKeysManager(props.getKeypairPrivate(), props.getKeypairPublic());
+		nodeKeysManager.init();
 	}
 
 //	@PostConstruct
 //	protected void init() {
 //		wb = WebClient.create(blockchaindbBaseUrl);
 //	}
+	
+	public ITransaction<?> generateTransaction(final TraceBase trace, String callerUserId) {
+		//final TraceBase trace = traceHandler.fromRequest(entry, callerUserId);
+		try {
+			return buildTransaction(trace);
+		} catch (JsonProcessingException | InvalidKeyException | NoSuchAlgorithmException | SignatureException e) {
+			log.error(Util.getFullStackTrace(e));
+			throw UncheckedExceptionFactory.get(e);
+		}
+	}
 
 	@Override
-	public void addEntry(final ReqDTO entry, String callerUserId) {
+	public TraceCacheOpResult submitTransaction(final ITransaction<?> transaction) {
+		String resultMsg = null;
+		ReqCacheStatus resultStatus = null;
+		String tId = null;
 		try {
-			final Trace trace = traceHandler.fromRequest(entry, callerUserId);
-			final Transaction<?, ?, ?> tr = buildTransaction(trace);
+			
+			tId = transaction.getId();
 //			traceCacheRepository.saveAndFlush(TraceCacheEntry.builder()
 //					.idTransaction(tr.getId())
 //					.submitDate(Instant.now())
@@ -140,152 +176,236 @@ public class BigchainDbManager implements BlockchainManager {
 			//log.info(getObjectWriter().writeValueAsString(tr));
 			HttpClient client = Util.getHttpClient(disableSSLVerification);
 	        HttpRequest request = HttpRequest.newBuilder()
-	                .uri(URI.create(this.blockchaindbBaseUrl + "/transactions?mode=" + transactionModePost))
-	                .POST(HttpRequest.BodyPublishers.ofString(getObjectWriter().writeValueAsString(tr)))
+	                .uri(URI.create(props.getUrl() + "/transactions?"
+	                		//+ "mode=commit"))
+	                		+ props.getTransactionModePost().name()))
+	                .POST(HttpRequest.BodyPublishers.ofString(getObjectWriter().writeValueAsString(transaction)))
 	                .build();
 	        HttpResponse<String> response = client.send(request,
 	                HttpResponse.BodyHandlers.ofString());
-	        log.info(response.body());
-		} catch (JsonProcessingException ex) {
-			log.error(ex.getMessage(), ex);
-			throw new UncheckedJsonProcessingException(ex);
-		} catch (InvalidKeyException ex) {
-			log.error(ex.getMessage(), ex);
-			throw new UncheckedInvalidKeyException(ex);
-		} catch (NoSuchAlgorithmException ex) {
-			log.error(ex.getMessage(), ex);
-			throw new UncheckedNoSuchAlgorithmException(ex);
-		} catch (SignatureException ex) {
-			log.error(ex.getMessage(), ex);
-			throw new UncheckedSignatureException(ex);
-		} catch (IOException ex) {
-			log.error(ex.getMessage(), ex);
-			throw new UncheckedIOException(ex);
-		} catch (InterruptedException ex) {
-			log.error(ex.getMessage(), ex);
-			throw new UncheckedInterruptedException(ex);
-		} catch (KeyManagementException ex) {
-			ex.printStackTrace();
-			log.error(ex.getMessage(), ex);
-			throw new UncheckedKeyManagementException(ex);
+	        if (response.statusCode() > 299) {
+	        	//throw new BigchaindbException(response.body());
+				resultMsg = "Blockchain returned status " + response.statusCode() + " with the following message: " + response.body();
+				resultStatus = ReqCacheStatus.BLOCKCHAIN_ERROR;
+	        } else {
+	        	resultStatus = ReqCacheStatus.BLOCKCHAIN_SUCCESS;
+	        }
+	        //log.info(response.body());
+		} catch (ConnectException | ClosedChannelException e) {
+			// Blockchain is not available
+			String st = Util.getFullStackTrace(e);
+			log.error(st);
+			resultMsg = st;
+			resultStatus = ReqCacheStatus.BLOCKCHAIN_UNAVAILABLE;
+		} catch (Exception e) {
+			log.error(Util.getFullStackTrace(e));
+			resultMsg = Util.getFullStackTrace(e);
+			resultStatus = ReqCacheStatus.ERROR;
 		}
-	}
-
-	@Override
-	public Transaction<?, ?, ?> getTransactionById(final String transactionId) {
-		return null;
-//		String transaction = wb.get().uri("/transactions/" + transactionId)
-//        .retrieve()
-//        .onStatus(httpStatus -> HttpStatus.ACCEPTED.equals(httpStatus),
-//        		response -> Mono.empty())
-//        .onStatus(httpStatus -> HttpStatus.NOT_FOUND.equals(httpStatus),
-//        		response -> Mono.error(new TransactionNotFoundException(response.bodyToMono(String.class).block(REQUEST_TIMEOUT))))
-//        .onStatus(httpStatus -> HttpStatus.BAD_REQUEST.equals(httpStatus),
-//        		response -> Mono.error(new BigchaindbException(response.bodyToMono(String.class).block(REQUEST_TIMEOUT))))
-//        .bodyToMono(String.class)
-//        .block(REQUEST_TIMEOUT);
-//		try {
-//			return getObjectReader().readValue(transaction);
-//		} catch (JsonMappingException ex) {
-//			throw new UncheckedJsonMappingException(ex);
 //		} catch (JsonProcessingException ex) {
-//			throw new UncheckedJsonProcessingException(ex);
+//			log.error(ex.getMessage(), ex);
+//			
+//			//throw new UncheckedJsonProcessingException(ex);
+//		} catch (InvalidKeyException ex) {
+//			log.error(ex.getMessage(), ex);
+//			//throw new UncheckedInvalidKeyException(ex);
+//		} catch (NoSuchAlgorithmException ex) {
+//			log.error(ex.getMessage(), ex);
+//			//throw new UncheckedNoSuchAlgorithmException(ex);
+//		} catch (SignatureException ex) {
+//			log.error(ex.getMessage(), ex);
+//			//throw new UncheckedSignatureException(ex);
+//		} catch (IOException ex) {
+//			log.error(ex.getMessage(), ex);
+//			//throw new UncheckedIOException(ex);
+//		} catch (InterruptedException ex) {
+//			log.error(ex.getMessage(), ex);
+//			//throw new UncheckedInterruptedException(ex);
+//		} catch (KeyManagementException ex) {
+//			log.error(ex.getMessage(), ex);
+//			//throw new UncheckedKeyManagementException(ex);
 //		}
+		return new TraceCacheOpResult(resultMsg, resultStatus, tId);
 	}
 	
-	public List<Trace> getTraceEntries() {
+	@Override
+	public TraceCacheOpResult getTransactionStatusById(final String transactionId) {
+		String resultMsg = null;
+		ReqCacheStatus resultStatus = null;
+		try {
+//			traceCacheRepository.saveAndFlush(TraceCacheEntry.builder()
+//					.idTransaction(tr.getId())
+//					.submitDate(Instant.now())
+//					.status(TraceCacheEntry.Status.SUBMITTED)
+//					.trace(trace)
+//					.build());
+
+			//log.info(getObjectWriter().writeValueAsString(tr));
+			HttpClient client = Util.getHttpClient(disableSSLVerification);
+	        HttpRequest request = HttpRequest.newBuilder()
+	        		.uri(URI.create(props.getUrl() + "/transactions/" + transactionId)).GET().build();
+	        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+	        if (response.statusCode() > 299) {
+	        	//throw new BigchaindbException(response.body());
+				resultMsg = "Blockchain returned status " + response.statusCode() + " with the following message: " + response.body();
+				resultStatus = ReqCacheStatus.BLOCKCHAIN_ERROR;
+	        } else {
+	        	resultStatus = ReqCacheStatus.BLOCKCHAIN_SUCCESS;
+	        }
+	        //log.info(response.body());
+		} catch (ConnectException | ClosedChannelException e) {
+			// Blockchain is not available
+			String st = Util.getFullStackTrace(e);
+			log.error(st);
+			resultMsg = st;
+			resultStatus = ReqCacheStatus.BLOCKCHAIN_UNAVAILABLE;
+		}  catch (Exception e) {
+			log.error(Util.getFullStackTrace(e));
+			resultMsg = Util.getFullStackTrace(e);
+			resultStatus = ReqCacheStatus.ERROR;
+		}
+		return new TraceCacheOpResult(resultMsg, resultStatus, transactionId);
+		
+	}
+
+//	@Override
+//	public ITransaction getTransactionById(final String transactionId) {
+//		String resultMsg = null;
+//		ReqCacheStatus resultStatus = null;
+//		try {
+////			traceCacheRepository.saveAndFlush(TraceCacheEntry.builder()
+////					.idTransaction(tr.getId())
+////					.submitDate(Instant.now())
+////					.status(TraceCacheEntry.Status.SUBMITTED)
+////					.trace(trace)
+////					.build());
+//
+//			//log.info(getObjectWriter().writeValueAsString(tr));
+//			HttpClient client = Util.getHttpClient(disableSSLVerification);
+//	        HttpRequest request = HttpRequest.newBuilder()
+//	                .uri(URI.create(props.getUrl() + "/transactions/" + transactionId)).GET().build();
+//	        HttpResponse<String> response = client.send(request,
+//	                HttpResponse.BodyHandlers.ofString());
+//	        if (response.statusCode() > 299) {
+//	        	return null;
+//	        } else {
+//	        	return getObjectReader().readValue(response.body(), Transaction.class);
+//	        }
+//	        //log.info(response.body());
+//		} catch (Exception e) {
+//			log.error(ExceptionUtils.getStackTrace(e));
+//			resultMsg = ExceptionUtils.getStackTrace(e);
+//			resultStatus = ReqCacheStatus.ERROR;
+//		}
+//	}
+	@Override
+	public List<TraceSummaryBase> getTraces(final FilterParams fp) {
 
 		try {
-			HttpResponse<String> response = getAssets();
+			HttpResponse<String> response = null;
+			Collection<String> vals = fp.toCollectionOfValues();
+			if (vals.isEmpty()) {
+				response = getAssetsByTraceVersion(List.of(TraceVersion.V1.name()));
+			} else {
+				response = getAssetsByFieldsValues(vals);
+			}
+			
 	        log.info(response.toString());
 	        ObjectMapper mapper = new ObjectMapper();
-	        List<AssetCreate<Trace>> assets = mapper.readValue(response.body(), new TypeReference<List<AssetCreate<Trace>>>(){});
+	        List<AssetCreate<TraceBase>> assets = mapper.readValue(response.body(), new TypeReference<List<AssetCreate<TraceBase>>>(){});
 	        //List<AssetCreate<Trace>> assets = getObjectReader().forType(new TypeReference<List<AssetCreate<Trace>>>(){}).<AssetCreate<Trace>>readValues(response.body()).readAll();
-			return assets.stream().filter(asset -> asset instanceof AssetCreate).map(asset -> ((AssetCreate<Trace>) asset).getData()).collect(Collectors.toList());
+			List<TraceBase>  traces = assets.stream().filter(asset -> asset instanceof AssetCreate).map(asset -> ((AssetCreate<TraceBase>) asset).getData())
+					.collect(Collectors.toList());
+			 return traces.stream().map(e -> e.toSummary()).toList();//traceFiltering.filterTraces(traces, fp);
 		} catch (JsonProcessingException ex) {
-			ex.printStackTrace();
-			log.error(ex.getMessage(), ex);
+			log.error(ExceptionUtils.getStackTrace(ex));
 			throw new UncheckedJsonProcessingException(ex);
 		} catch (IOException ex) {
-			ex.printStackTrace();
-			log.error(ex.getMessage(), ex);
+			log.error(ExceptionUtils.getStackTrace(ex));
 			throw new UncheckedIOException(ex);
 		} catch (InterruptedException ex) {
-			ex.printStackTrace();
-			log.error(ex.getMessage(), ex);
+			log.error(ExceptionUtils.getStackTrace(ex));
 			throw new UncheckedInterruptedException(ex);
 		} catch (KeyManagementException ex) {
-			ex.printStackTrace();
-			log.error(ex.getMessage(), ex);
+			log.error(ExceptionUtils.getStackTrace(ex));
 			throw new UncheckedKeyManagementException(ex);
 		} catch (NoSuchAlgorithmException ex) {
-			ex.printStackTrace();
-			log.error(ex.getMessage(), ex);
+			log.error(ExceptionUtils.getStackTrace(ex));
 			throw new UncheckedNoSuchAlgorithmException(ex);
 		}
 	}
-
-	public List<Trace> getTraceEntriesByUserId(final String userId) {
-
+	
+	@Override
+	public TraceBase getTraceById(String traceId) {
 		try {
-			HttpResponse<String> response = getAssetsByField(Trace.FNAME_USER_ID, userId);
+			HttpResponse<String> response = null;
+			response = getAssetsByFieldsValues(List.of(traceId));
+			
 	        log.info(response.toString());
 	        ObjectMapper mapper = new ObjectMapper();
-	        List<AssetCreate<Trace>> assets = mapper.readValue(response.body(), new TypeReference<List<AssetCreate<Trace>>>(){});
+	        List<AssetCreate<TraceBase>> assets = mapper.readValue(response.body(), new TypeReference<List<AssetCreate<TraceBase>>>(){});
 	        //List<AssetCreate<Trace>> assets = getObjectReader().forType(new TypeReference<List<AssetCreate<Trace>>>(){}).<AssetCreate<Trace>>readValues(response.body()).readAll();
-			return assets.stream().filter(asset -> asset instanceof AssetCreate).map(asset -> ((AssetCreate<Trace>) asset).getData()).collect(Collectors.toList());
+			List<TraceBase>  traces = assets.stream().filter(asset -> asset instanceof AssetCreate).map(asset -> ((AssetCreate<TraceBase>) asset).getData())
+					.collect(Collectors.toList());
+			 List<TraceBase> filt = traces.stream().filter(e -> e.getId().contentEquals(traceId)).toList();
+			 if (filt.size() > 1) {
+				 throw new TraceException("Too many traces (" + filt.size() + ") for ID " + traceId);
+			 } else if (filt.size() == 1) {
+				 return filt.get(0);
+			 } else {
+				 return null;
+			 }
+			 //traceFiltering.filterTraces(traces, fp);
 		} catch (JsonProcessingException ex) {
-			ex.printStackTrace();
-			log.error(ex.getMessage(), ex);
+			log.error(ExceptionUtils.getStackTrace(ex));
 			throw new UncheckedJsonProcessingException(ex);
 		} catch (IOException ex) {
-			ex.printStackTrace();
-			log.error(ex.getMessage(), ex);
+			log.error(ExceptionUtils.getStackTrace(ex));
 			throw new UncheckedIOException(ex);
 		} catch (InterruptedException ex) {
-			ex.printStackTrace();
-			log.error(ex.getMessage(), ex);
+			log.error(ExceptionUtils.getStackTrace(ex));
 			throw new UncheckedInterruptedException(ex);
 		} catch (KeyManagementException ex) {
-			ex.printStackTrace();
-			log.error(ex.getMessage(), ex);
+			log.error(ExceptionUtils.getStackTrace(ex));
 			throw new UncheckedKeyManagementException(ex);
 		} catch (NoSuchAlgorithmException ex) {
-			ex.printStackTrace();
-			log.error(ex.getMessage(), ex);
+			log.error(ExceptionUtils.getStackTrace(ex));
 			throw new UncheckedNoSuchAlgorithmException(ex);
 		}
 	}
 	
-	protected HttpResponse<String> getAssets()
+	protected HttpResponse<String> getAssetsByTraceVersion(final List<String> versions)
 			throws IOException, InterruptedException, KeyManagementException, NoSuchAlgorithmException {
 		HttpClient client = Util.getHttpClient(disableSSLVerification);
         HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(this.blockchaindbBaseUrl + "/assets"))
+                .uri(URI.create(props.getUrl() + 
+                		"/assets?search=" + 
+                			URLEncoder.encode("\"" + Strings.join(versions, ',') + "\"", StandardCharsets.UTF_8)))
                 .GET()
                 .build();
          return client.send(request,
                 HttpResponse.BodyHandlers.ofString());
 	}
 
-	protected HttpResponse<String> getAssetsByField(String fieldName, String fieldValue)
+	protected HttpResponse<String> getAssetsByFieldsValues(Collection<String> fieldsValues)
 			throws IOException, InterruptedException, KeyManagementException, NoSuchAlgorithmException {
 		HttpClient client = Util.getHttpClient(disableSSLVerification);
+		String searchParams = fieldsValues.stream().map(fv -> URLEncoder.encode("\"" + fv + "\"", StandardCharsets.UTF_8))
+        		.collect(Collectors.joining(" "));
         HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(this.blockchaindbBaseUrl + "/assets?search=" +
-                		URLEncoder.encode(fieldValue, StandardCharsets.UTF_8)))
+                .uri(URI.create(props.getUrl() + "/assets?search=" + searchParams))
                 .GET()
                 .build();
          return client.send(request,
                 HttpResponse.BodyHandlers.ofString());
 	}
 
-	protected Transaction<?, ?, ?> buildTransaction(final Trace trace)
+	protected Transaction<?, ?, ?> buildTransaction(final TraceBase trace)
 			throws JsonProcessingException, NoSuchAlgorithmException, InvalidKeyException, SignatureException {
 		final Asset asset = buildAsset(trace);
 		Ed25519Sha256Fulfillment fulfillment = generateFulfillment();
 		List<Input> inputs = buildInputs(fulfillment);
-		List<Output> outputs = buildOutputs(defaultAmountTransaction, fulfillment);
+		List<Output> outputs = buildOutputs(props.getDefaultAmountTransaction(), fulfillment);
 		Transaction<?,?, ?> tr = Transaction.builder()
 				.asset(asset)
 				.id(null)
@@ -304,7 +424,7 @@ public class BigchainDbManager implements BlockchainManager {
             throws InvalidKeyException, SignatureException, NoSuchAlgorithmException, JsonProcessingException {
     	byte[] jsonRepr = getObjectWriter().writeValueAsBytes(tr);
 
-        byte[] sha3Hash = hashingService.getHash(jsonRepr, HashType.SHA3_256).getHash();
+        byte[] sha3Hash = HashingService.getHash(jsonRepr, HashType.SHA3_256).getHash();
 
         // signing the transaction
         Signature edDsaSigner = new EdDSAEngine(MessageDigest.getInstance("SHA-512"));
@@ -341,8 +461,8 @@ public class BigchainDbManager implements BlockchainManager {
       }
     }
 
-	protected Asset buildAsset(final Trace trace) {
-		AssetCreate<Trace> asset = new AssetCreate<>();
+	protected Asset buildAsset(final TraceBase trace) {
+		AssetCreate<TraceBase> asset = new AssetCreate<>();
 		asset.setData(trace);
 		return asset;
 	}
@@ -411,7 +531,7 @@ public class BigchainDbManager implements BlockchainManager {
 
 	protected String determineId(final Transaction<?, ?, ?> tr) throws JsonProcessingException, NoSuchAlgorithmException {
 		byte[] jsonRepr = getObjectWriter().writeValueAsBytes(tr);
-		return Hex.encodeHexString(hashingService.getHash(jsonRepr, HashType.SHA3_256).getHash());
+		return Hex.encodeHexString(HashingService.getHash(jsonRepr, HashType.SHA3_256).getHash());
 	}
 
 	protected ObjectReader getObjectReader() {
@@ -420,6 +540,16 @@ public class BigchainDbManager implements BlockchainManager {
 
 	protected ObjectWriter getObjectWriter() {
 		return new ObjectMapper().configure(MapperFeature.SORT_PROPERTIES_ALPHABETICALLY, true).writer();
+	}
+
+	@Override
+	public BlockchainProperties getBlockchainProperties() {
+		return props;
+	}
+
+	@Override
+	public BlockchainType getType() {
+		return BlockchainType.BIGCHAINDB_PRIVATE;
 	}
 
 }
